// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator Simple Cases > mismatching literal number, string 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: 5;
+  existingProp: string;
}"
`;

exports[`Comparator Simple Cases > mismatching literal string, number 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: 'a';
+  existingProp: number;
}"
`;

exports[`Comparator Simple Cases > mismatching typeof literal number 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,5 +1,5 @@
const num = 'a';

export interface SimpleInterface {
-  existingProp: typeof num;
+  existingProp: number;
}"
`;

exports[`Comparator Simple Cases > mismatching typeof literal string 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,5 +1,5 @@
const text = 'a';

export interface SimpleInterface {
-  existingProp: typeof text;
+  existingProp: number;
}"
`;

exports[`Comparator Simple Cases > object type added member 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,5 +1,7 @@
export interface SimpleInterface {
  existingProp: {
    prop1: string;
+
+    prop2: unknown;
  };
}"
`;

exports[`Comparator Simple Cases > object type removed member 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,6 +1,5 @@
export interface SimpleInterface {
  existingProp: {
    prop1: string;
-    prop2: unknown;
  };
}"
`;

exports[`Comparator Simple Cases > simple add missing property 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,5 @@
export interface SimpleInterface {
  existingProp: string;
+
+  newProp: number;
}"
`;

exports[`Comparator Simple Cases > simple array type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string[];
+  existingProp: number[];
}"
`;

exports[`Comparator Simple Cases > simple number, set mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: number;
+  existingProp: Set<number>;
}"
`;

exports[`Comparator Simple Cases > simple remove property 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,4 +1,3 @@
export interface SimpleInterface {
  existingProp: string;
-  newProp: number;
}"
`;

exports[`Comparator Simple Cases > simple set type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: Set<string>;
+  existingProp: Set<number>;
}"
`;

exports[`Comparator Simple Cases > simple string, array mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string;
+  existingProp: string[];
}"
`;

exports[`Comparator Simple Cases > simple type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string;
+  existingProp: number;
}"
`;

exports[`Comparator Simple Cases > simple union type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string;
+  existingProp: number | string;
}"
`;

exports[`Comparator Simple Cases > union literal type with unknown wrong optional 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface FooInterface {
-  foo: { summary: string, result: number } | { summary?: undefined, result: number };
+  foo: { summary?: string, result: number } | { summary?: undefined, result: number };
}"
`;
